# cmd/main.go
@@ -2,6 +2,7 @@ package main
 
 import (
 	"libra-ry/config"
+	authorization "libra-ry/internal/auth"
 	"libra-ry/internal/handler"
 	"libra-ry/internal/middleware"
 	"libra-ry/internal/repository"
@@ -10,10 +11,16 @@ import (
 	"github.com/gofiber/fiber/v2"
 )
 
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
 func main() {
+	// Load environment variables and initialize logger and database connection
+	config.LoadEnv()
+	// Initialize logger and database connection
 	logger := config.NewLogger()
 	db := config.NewDB(logger)
-
+	// Initalize Fiber app
 	app := fiber.New()
 
 	// Middleware global
@@ -22,16 +29,27 @@ func main() {
 	app.Use(middleware.CORSMiddleware())
 	app.Use(config.NewSwaggerConfig())
 
+	// Initialize repository, use case, and handler for Buku
 	repo := repository.NewBukuRepository(db)
 	useCase := usecase.NewBukuUseCase(repo)
 	handler := handler.NewBukuHandler(useCase)
 
-	app.Get("/buku", handler.GetBuku)
-	app.Get("/buku/:id", handler.GetBukuByID)
-	app.Post("/buku", handler.CreateBuku)
-	app.Put("/buku/:id", handler.UpdateBuku)
-	app.Delete("/buku/:id", handler.DeleteBuku)
+	// Route untuk Swagger UI
+	// Group buku dengan middleware JWT
+	buku := app.Group("/buku", middleware.JWTMiddleware())
+	// GET hanya bisa diakses oleh user dengan izin "buku_read"
+	buku.Get("/", middleware.CheckPermission("buku_read"), handler.GetBuku)
+	// POST, PUT, DELETE hanya bisa diakses oleh user dengan izin "buku_write"
+	buku.Post("/", middleware.CheckPermission("buku_write"), handler.CreateBuku)
+	buku.Put("/:id", middleware.CheckPermission("buku_write"), handler.UpdateBuku)
+	buku.Delete("/:id", middleware.CheckPermission("buku_write"), handler.DeleteBuku)
 
-	logger.Info("Server is running on port 3000")
-	app.Listen(":3000")
+	// Route untuk Swagger UI
+	// Group auth tanpa middleware JWT
+	auth := app.Group("/auth")
+	auth.Post("/login", authorization.Login)
+
+	port := config.GetEnv("APP_PORT", "3000")
+	logger.Info("Server is running on port " + port)
+	app.Listen(":" + port)
 }
